member count
Former-commit-id: 7484593f6189a9a31644eedf62ba788a9f11ff69